POST, PUT, DELETE for EmployeeResource